--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <canvas id="canvas" tabindex="0" height="600" width="600"></canvas>
   <script src="index.js"></script>
 </body>
 
