--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>My Rust + Webpack project!</title>
+  <title>Rust Graphics Engine</title>
 </head>
 
 <body>
