--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,21 @@
   <title>Rust Graphics Engine</title>
 </head>
 
-<body>
-  <canvas id="canvas" tabindex="0" width="800" height="600"></canvas>
+<style>
+  body {
+    margin: 0;
+  }
+
+  canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+  }
+
+</style>
+
+<body style="margin: 0;">
+  <canvas id="canvas" tabindex="0"></canvas>
   <script src="index.js"></script>
 </body>
 
